deploy: 0faf9456596ad24a2d7e19cdba0257d8e81a0316

--- a/print.html
+++ b/print.html
@@ -891,7 +891,7 @@ TILESET: tiles.png
 </code></pre>
 <p>Now you can use your mod tilesheet.</p>
 <h1><a class="header" href="#tools" id="tools">Tools</a></h1>
-<h1><a class="header" href="#common-tools-scrips" id="common-tools-scrips">Common tools (scrips)</a></h1>
+<h1><a class="header" href="#common-tools-scripts" id="common-tools-scripts">Common tools (scripts)</a></h1>
 <p>These are the tools that works the same way on every operating system.</p>
 <p>They supposed to run in shell environment and if you afraid doing so please refer <a href="tools/./windows_wrappers.html">Windows wrappers</a> documentation.</p>
 <h2><a class="header" href="#add_outlinepy" id="add_outlinepy">add_outline.py</a></h2>
