--- a/tools/common_tools.html
+++ b/tools/common_tools.html
@@ -159,7 +159,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#common-tools-scrips" id="common-tools-scrips">Common tools (scrips)</a></h1>
+                        <h1><a class="header" href="#common-tools-scripts" id="common-tools-scripts">Common tools (scripts)</a></h1>
 <p>These are the tools that works the same way on every operating system.</p>
 <p>They supposed to run in shell environment and if you afraid doing so please refer <a href="./windows_wrappers.html">Windows wrappers</a> documentation.</p>
 <h2><a class="header" href="#add_outlinepy" id="add_outlinepy">add_outline.py</a></h2>
